--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,14 +36,5 @@ jobs:
     - name: Run Testsuite
       run: vendor/bin/phpunit tests/
       
-    - name: Install PHP_CodeSniffer
-      run: |
-          curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
-          php phpcs.phar --version
-
-    - uses: Novusvetus/action-php_codesniffer@1.2.2
-      with:
-          files: "**.php"
-          scan_all: true
-          phpcs_path: php phpcs.phar
-          standard: phpcs.xml --extensions=php 
+    - name: PHP-Insights
+      uses: docker://tienvx/phpinsights-action
