--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -41,6 +41,11 @@ jobs:
       with:
         dir: './'
         
-    - name: Laravel Insight
-      uses: stefanzweifel/laravel-phpinsights-action@v1.1.1
+    - name: PM PHP CS
+      uses: pmagentur/pm_php_cs_symphony@v0.1
+      
+    - name: PHP-stan
+      uses: zalexki/phpstan-action@0.1
+
+
       
